# AutoImageSlicerUltra

./: .gitignore  AGENTS.md  README.md  pyproject.toml
panel-slice-ultra/: README.md  package-lock.json  package.json
panel-slice-ultra/public/: manifest.webmanifest  sw.js
panel-slice-ultra/src/app/: globals.css  layout.tsx  page.tsx
panel-slice-ultra/src/components/: CaptionEditor.tsx  EditingScreen.tsx  ExportScreen.tsx  ImageSwitcher.tsx  ImageWorkspace.tsx  PanelSliceApp.tsx  PreviewScreen.tsx  PwaRegister.tsx  ToolBar.tsx  UploadScreen.tsx
panel-slice-ultra/src/lib/: export.ts  id.ts  region-generator.ts  text-overlay.ts  types.ts
src/autoimageslicerultra/: __init__.py  cli.py  slicer.py  web.py
tests/: conftest.py  test_slicer.py  test_web.py
